index.css
:root {
  --border-rad-lg: 15px;
  --medium-light-text: black;
  --light-text: #fcfcfc;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: Arial, sans-serif;
}

main {
  background-image: url("images/miet-bg.jpeg");
  height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* chatbot elements */

.chatbot-container {
  background-color: whitesmoke;
  width: 560px;
  min-height: 460px;
  border: 3px solid #3b82f6;
  border-radius: 10px;
  display: flex;
  flex-direction: column;
}

.chatbot-container > * {
  padding: 1.8em;
}

.chatbot-header {
  display: grid;
  grid-template-areas:
    "logo . ."
    "logo title supportId"
    "logo subtitle clear-btn";
  background-color: #3b82f6;
}

.chatbot-header > * {
  margin: 0.1em;
}

.logo {
  grid-area: logo;
  width: 75px;
}

.clear-btn {
  grid-area: clear-btn;
  height: 20px;
  padding: 0;
  width: 80%;
  font-size: 12px;
  margin: 0 auto;
  border: 2px solid black;
  color: black;
}

.clear-btn:hover {
  border: 3px solid whitesmoke;
  color: white;
  cursor: pointer;
}

.chatbot-conversation {
  height: 400px;
  overflow-y: scroll;
  margin: 0em 0;
}

/* stop ugly scroll bar on some browsers */
.chatbot-conversation::-webkit-scrollbar {
  display: none;
}

.chatbot-conversation::-moz-scrollbar {
  display: none;
}

.speech {
  padding: 1em;
  max-width: 240px;
  color: var(--light-text);
  min-width: 96%;
  border-radius: var(--border-rad-lg);
  font-size: 1.08em;
}

.speech:first-child {
  margin-top: 0;
}

.speech-ai {
  background: black;
  border-top-left-radius: 0;
  margin: 1.2em 1em 0 0;
}

.speech-human {
  margin: 1.2em 0 0 1em;
  background: #3b82f6;
  border-top-right-radius: 0;
}

.chatbot-input-container {
  display: flex;
}

input[type="text"],
button {
  background-color: transparent;
  border: 1px solid #3b82f6;
  border-radius: 15px;
  padding: 1em;
}

input[type="text"]:focus,
button:focus {
  outline: none;
}
input[type="text"] {
  color: black;
  width: 100%;
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.submit-btn {
  border-left: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.send-btn-icon,
.microphone-icon {
  width: 25px;
  display: block;
  cursor: pointer;
}

.microphone-btn {
  border-top: 1px solid #3b82f6; /* Add top border */
  border-bottom: 1px solid #3b82f6; /* Add bottom border */
  border-left: none; /* Remove left border */
  border-right: none; /* Remove right border */
  border-radius: 0%;
  background-color: transparent; /* Remove background color */
  cursor: pointer;
}

/* text */

h1 {
  font-size: 22px;
  color: black;
  grid-area: title;
}

h2,
p {
  color: var(--medium-light-text);
}

h2 {
  font-size: 12px;
  font-weight: 700;
  grid-area: subtitle;
  text-transform: uppercase;
}

.microphone-btn.hover-active {
  background-color: lightskyblue; /* Example background color */
}

/* The cursor */

/* @keyframes cursor-blink {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.blinking-cursor::after {
  content: "|";
  font-weight: 700;
  display: inline-block;
  animation: cursor-blink 0.5s steps(2) infinite;
} */

/* Extra small screens (portrait phones) */
@media only screen and (max-width: 479px) {
  .chatbot-container {
    height: 85%;
    width: 85%;
  }
  .chatbot-header {
    height: 28%;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-around;
  }
  .logo {
    width: 50px;
    height: fit-content;
  }
  .chatbot-header h1,
  .chatbot-header h2 {
    height: 30%;
    text-align: center;
  }
  .chatbot-header .clear-btn {
    width: 70%;
  }
  .chatbot-conversation {
    height: 400%;
  }
  .speech {
    max-width: fit-content;
    height: fit-content;
    font-size: 1em;
  }
  .chatbot-input-container {
    height: 12%;
    width: 100%;
    padding: 2%;
    display: flex;
    justify-content: space-around;
    align-items: center;
  }
  .send-btn-icon,
  .microphone-icon {
    width: 19px;
    cursor: pointer;
    border-left: none; /* Remove left border */
    border-right: none; /* Remove right border */
    border-radius: 0%;
    background-color: transparent; /* Remove background color */
  }
}

